# regenerator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  d.natvis  dub.json  main.cpp
cpp/: CMakeLists.txt
liblua/: CMakeLists.txt
lua/: cs_kinect_v2.lua  cs_libclang.lua  cs_windowskits.lua  csharp.lua  d_d3d11.lua  d_imgui.lua  d_libclang.lua  d_liblua.lua  d_windowskits.lua  dlang.lua  predefine.lua
sample/: CMakeLists.txt  sample.h
scripts/: d_liblua.lua  liblua.lua
source/: app.d  clangcursor.d  clangdecl.d  clanghelper.d  clangparser.d  clangtypes.d  cursoriterator.d  dexporter.d  export_d.d  luafunc.d  luahelper.d  luamacros.d  luastack.d  luastate.d  parser.d  predefine.lua  sliceview.d
source/exporter/: dlangexporter.d  omitenumprefix.d  processor.d  source.d
source/libclang/: CXErrorCode.d  CXString.d  Index.d  corecrt.d  package.d  vcruntime.d
source/liblua/: corecrt_wstdio.d  lauxlib.d  lua.d  lualib.d  package.d  vadefs.d  vcruntime.d
source/lua/: corecrt_wstdio.d  lauxlib.d  lua.d  lualib.d  package.d  vadefs.d  vcruntime.d
source/luautils/: luafunc.d  luastack.d  luastate.d  luausertype.d  package.d
