CMAKE_MINIMUM_REQUIRED(VERSION 3.13.0)
PROJECT(clang_sample VERSION 0.1.0)

set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug/lib)
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug/lib)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug/bin)
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release/lib)
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release/lib)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release/bin)

FILE(GLOB SRC
    *.cpp
    *.h
    ) 

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
    "C:/Program Files/LLVM/include"
    )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE
    "C:/Program Files/LLVM/lib/libclang.lib"
    )
